Correction finale des menu de navigation
Ce commit corrige pour de bon le problÃ¨m du menu de navigations et du
lecteur qui passaient par dessus le scrollbar.

ProblÃ¨me rsolut en utilisant une nouvelle fonction de CSS3:
position: sticky;

En cas d'incompatiblitÃ© avec le navigateur(pour internet explorer par
exemple) l'attribut ci-dessous sera utilisÃ© a la place:
position: relative;

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -346,6 +346,10 @@ html {
   color: red;
 }
 
+.navbar-bottom {
+  bottom: 0;
+}
+
 /* Main Page container */
 
 .global-container {
@@ -357,11 +361,16 @@ html {
 }
 
 .main-page-container {
-  min-height: 100%;
+  min-height: calc(100% - 56px - 56px);
   height: auto !important;
   width: 100%;
   z-index: 2;
   margin-top: -5px;
+}
+
+.text-friendly-background {
+  background-color: rgba(18, 18, 18, 0.7);
+  background-repeat: repeat;
 }
 
 /* Radio stations */
@@ -412,8 +421,6 @@ li.radio-app-logo a img {
 .text-container {
   width: 100%;
   color: white;
-  background-color: rgba(18, 18, 18, 0.7);
-  background-repeat: repeat;
   padding-bottom: 56px;
   padding-left: 20px;
   padding-right: 20px;
@@ -421,7 +428,6 @@ li.radio-app-logo a img {
 
 .full-size {
   min-height: 100%;
-  position: absolute;
 }
 
 .about-title-container {
